fixing overflow y for blockpalette, tweaking darkmode

--- a/code-connect/src/Components/BlockPalette/BlockPalette.css
+++ b/code-connect/src/Components/BlockPalette/BlockPalette.css
@@ -43,7 +43,7 @@
 }
 
 .blocks-container {
-  max-height: calc(100vh - 120px);
+  max-height: calc(100vh - 30vh);
   overflow-y: auto;
   padding-bottom: 20px;
   border-bottom: 2px solid #555;
